error_log.txt
d.edens@dedens-KGPWGMW6FT testbrowser % cargo test -- --nocapture | cat
   Compiling tinker v0.1.0 (/Users/d.edens/lab/testbrowser)
warning: unused import: `tracing::debug`
 --> src/browser/tabs.rs:4:5
  |
4 | use tracing::debug;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `self`
 --> src/browser/replay.rs:2:15
  |
2 | use std::io::{self, BufWriter, BufReader};
  |               ^^^^

warning: methods `handle_command` and `handle_ipc_message` are never used
   --> src/browser/mod.rs:463:8
    |
44  | impl BrowserEngine {
    | ------------------ methods in this implementation
...
463 |     fn handle_command(&mut self, command: BrowserCommand) -> Result<(), String> {
    |        ^^^^^^^^^^^^^^
...
533 |     fn handle_ipc_message(&self, msg: &str) -> Result<(), String> {
    |        ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field `max_events` is never read
  --> src/browser/event_viewer.rs:16:5
   |
14 | pub struct EventViewer {
   |            ----------- field in this struct
15 |     events: VecDeque<EventEntry>,
16 |     max_events: usize,
   |     ^^^^^^^^^^

warning: field `cmd_tx` is never read
  --> src/browser/tab_ui.rs:10:5
   |
8  | pub struct TabBar {
   |            ------ field in this struct
9  |     webview: Arc<Mutex<WebView>>,
10 |     cmd_tx: Sender<TabCommand>,
   |     ^^^^^^
   |
   = note: `TabBar` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead
 code analysis

warning: `tinker` (lib test) generated 5 warnings (run `cargo fix --lib -p tinker --tests` to apply 2 sugge
stions)
warning: `tinker` (lib) generated 5 warnings (5 duplicates)
error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/browser_engine_tests.rs:9:23
   |
9  |     let mut browser = BrowserEngine::new(false, None);
   |                       ^^^^^^^^^^^^^^^^^^------------- an argument of type `Option<String>` is missing
   |
note: associated function defined here
  --> /Users/d.edens/lab/testbrowser/src/browser/mod.rs:45:12
   |
45 |     pub fn new(headless: bool, events: Option<Arc<Mutex<EventSystem>>>, initial_url: Option<String>...
   |            ^^^
help: provide the argument
   |
9  |     let mut browser = BrowserEngine::new(false, None, /* Option<String> */);
   |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/browser_engine_tests.rs:38:23
   |
38 |     let mut browser = BrowserEngine::new(false, Some(events));
   |                       ^^^^^^^^^^^^^^^^^^--------------------- an argument of type `Option<String>` is 
missing
   |
note: associated function defined here
  --> /Users/d.edens/lab/testbrowser/src/browser/mod.rs:45:12
   |
45 |     pub fn new(headless: bool, events: Option<Arc<Mutex<EventSystem>>>, initial_url: Option<String>...
   |            ^^^
help: provide the argument
   |
38 |     let mut browser = BrowserEngine::new(false, Some(events), /* Option<String> */);
   |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/browser_engine_tests.rs:55:23
   |
55 |     let mut browser = BrowserEngine::new(false, None);
   |                       ^^^^^^^^^^^^^^^^^^------------- an argument of type `Option<String>` is missing
   |
note: associated function defined here
  --> /Users/d.edens/lab/testbrowser/src/browser/mod.rs:45:12
   |
45 |     pub fn new(headless: bool, events: Option<Arc<Mutex<EventSystem>>>, initial_url: Option<String>...
   |            ^^^
help: provide the argument
   |
55 |     let mut browser = BrowserEngine::new(false, None, /* Option<String> */);
   |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

For more information about this error, try `rustc --explain E0061`.
error: could not compile `tinker` (test "browser_engine_tests") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
warning: unused import: `debug`
 --> src/main.rs:2:15
  |
2 | use tracing::{debug, error, info};
  |               ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `tracing::debug`
 --> src/browser/tabs.rs:4:5
  |
4 | use tracing::debug;
  |     ^^^^^^^^^^^^^^

warning: unused variable: `tab_id`
   --> src/main.rs:111:9
    |
111 |     let tab_id = browser.create_tab("about:blank")?;
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_tab_id`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0382]: use of moved value
   --> src/main.rs:123:17
    |
74  |         args.url,
    |         -------- value moved here
...
123 |     if let Some(url) = args.url {
    |                 ^^^ value used here after move
    |
    = note: move occurs because `args.url` has type `std::option::Option<std::string::String>`, which does 
not implement the `Copy` trait

For more information about this error, try `rustc --explain E0382`.
warning: `tinker` (bin "tinker" test) generated 4 warnings (3 duplicates)
error: could not compile `tinker` (bin "tinker" test) due to previous error; 4 warnings emitted
warning: `tinker` (bin "tinker") generated 4 warnings (2 duplicates)
error: could not compile `tinker` (bin "tinker") due to previous error; 4 warnings emitted
    Building [=======================> ] 239/242: cli_tests(test), keyboard_tests(test), event_tests(t...
